Fix message too long

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -9,7 +9,7 @@
 }
 
 #new-tweet-text {
-  height: 45px;
+  height: 60px;
   width: 750px;
   border: none;
   border-bottom: 5px solid #555149;
